Ya casi terminado el resumen de la Unidad 2

--- a/apuntes/sop/parcial1/bibliografia.bib
+++ b/apuntes/sop/parcial1/bibliografia.bib
@@ -5,3 +5,11 @@
   edition = {5},
   publisher = {Pearson Educación, S.A.}
 }
+
+@book{tanenbaum,
+  author = {Andrew S. Tanenbaum},
+  title = {Sistemas operativos modernos.},
+  year = {2009},
+  edition = {3},
+  publisher = {Pearson Educación.}
+}
