--- a/apuntes/am2/parcial1/resumen.tex
+++ b/apuntes/am2/parcial1/resumen.tex
@@ -1193,9 +1193,174 @@ y considerar a $ S $ como una superficie de nivel con $ k=0 $, de manera que
   F_{z}(x_{0},y_{0},z_{0}) &= -1
 \end{align*}
 
-\bsubsection{Máximos y mínimos}
+\subsection{Máximos y mínimos}
+\vspace{0.2cm}
+\fbox{\parbox{0.9\linewidth}{
+\textbf{Definición}
+
+Una función de dos variables tiene un \textbf{máximo local} en $ (a,b) $ si $ f(x,y) \leq f(a,b) $ cuando $ (x,y) $ está cerca de $ (a,b) $. El número $ f(a,b) $ se llama \textbf{valor máximo local}. 
+
+Si $ f(x,y) \geq f(a,b) $ cuando $ (x,y) $ está cerca de $ (a,b) $, $ f $ tiene un \textbf{mínimo local} en $ (a,b) $ y $ f(a,b) $ es un \textbf{valor mínimo local}
+}}\vspace{0.2cm}
+
+Si las desigualdades de la definición anterior son válidas para todos los puntos $ (x,y) $ en el dominio de $ f $, entonces $ f $ tiene un \textbf{máximo absoluto} (o \textbf{mínimo absoluto}) en $ (a,b) $.
+
+Si $ f $ tiene un máximo o mínimo local en $ (a,b) $ y las derivadas parciales existen, entonces $ f_{x}(a,b)=0 $ y $ f_{y}(a,b)=0 $. En otras palabras, si hay un máximo o un mínimo en $ (a,b) $, el gradiente de $ f $ es cero $ \nabla f(a,b)=0 $.
+
+Un \textbf{punto crítico} de $ f $ es cuando $ f_{x}(a,b)=0 $ o $ f_{y}(a,b)=0 $ o si una de las derivadas parciales no existe. Todos los máximos y mínimos de $ f $ son puntos críticos, pero no todos los puntos críticos son máximos y mínimos de $ f $.
+
+\underline{Ejemplo:} Sea $ f(x,y)=x^2 + y^2 - 2x-6y+14 $. Entonces,
+\begin{align*}
+	f_{x}(x,y) = 2x-2 && f_{y}(x,y)=2y-6
+\end{align*}
+Estas derivadas parciales son iguales a cero cuando $ x=1 $ y $ y=3 $, así que el único punto crítico es $ (1,3) $. 
+
+Generalmente conviene completar los cuadrados para facilitar los cálculos, la función entonces nos quedaría así:
+\begin{align*}
+  f(x,y) &= (x-1)^2 + (y-3)^2 + 4
+\end{align*}
+Al evaluar la función en el punto $ (1, y) $ nos queda $ (y-3)^2 \geq 0 $, y cuando evaluamos la función en el punto $ (x,3) $ obtenemos $ (x-1)^2 \geq 0 $. Esto nos dice que la función crece en la dirección de $ x $ y también en la dirección de $ y $ a partir del punto $ (1,3) $, por lo que si reemplazamos $ (x,y) $ por el punto crítico $ (1,3) $ en la ecuación, nos dá 4, que es un mínimo local. De hecho, como el vértice del paraboloide se encuentra en el punto $ (1,3,4) $, la función SIEMPRE va a ser mayor a o igual 4, así que $ f(1,3)=4 $ es un mínimo absoluto de $ f $.
+
+\begin{center}
+\begin{tikzpicture}
+  \begin{axis}[
+    title={$ f(x,y)=(x-1)^2+(y-3)^2+4 $},
+    xlabel=$x$, ylabel=$y$, zlabel={$f(x,y)$},
+    view={110}{10},
+    xmin=0, xmax=6,
+    ymin=0, ymax=6,
+    zmin=0, zmax=15,
+    point meta min=4, point meta max=15,
+    axis lines=center,
+    axis on top=true,
+    samples=40,
+  ]
+    \addplot3 [surf, shader=flat,  colormap/viridis,]
+	    {(x-1)^2 + (y-3)^2 + 4};
+    \addplot3[only marks, mark=*,mark size=5pt,color=red,]
+	    coordinates {(1,3,4)};
+    \node at (axis cs:1,3,4) [anchor=north] {$P(1,3,4)$};
+  \end{axis}
+\end{tikzpicture}
+\end{center}
+
+\underline{Ejemplo 2:} Sea $ f(x,y)=y^2-x^2 $. Entonces,
+\begin{align*}
+	f_{x}(x,y) = -2x && f_{y}(x,y)  = 2y
+\end{align*}
+
+Las derivadas se hacen cero cuando $ x = y = 0 $, así que tenemos un solo punto crítico en el $ (0,0) $. Sin embargo, cuando ahora analizamos la función para cada uno de los puntos vemos que a veces crece, y otras decrece: $ f(0,y)=y^2 \geq 0 $, pero $ f(x,0)=-x^2 \leq 0 $. En consecuencia, todos los discos con centro $ (0,0) $ contienen puntos donde $ f $ adopta valores positivos, así como puntos en los que $ f $ adopta valores neagtivos. Por lo tanto, $ f(0,0)=0 $ no puede ser ni un mínimo ni un máximo de $ f $. Es un \textbf{punto silla}.
+
+\begin{center}
+\begin{tikzpicture}
+  \begin{axis}[
+	  title={$ f(x,y)=y^2-x^2 $},
+	  xlabel=$x$, ylabel=$y$, zlabel={$f(x,y)$},
+	  view={110}{20},
+	  axis lines=center,
+	  axis on top=true,
+	  ]
+    \addplot3 [surf, shader=flat, colormap/viridis,]
+	    {y^2-x^2};
+    \addplot3 [only marks, mark=*, mark size=5pt, color=red]
+	    coordinates{(0,0,0)};
+  \end{axis}
+\end{tikzpicture}
+\end{center}
+
+Podemos ver entonces que no alcanza solo con calcular los puntos críticos de una función para determinar si esta tiene máximos o mínimos. Existen distintos métodos para determinarlo pero el mas común es el de calcular la determinante del \textbf{Hessiano}. El \textbf{Hessiano} es la matriz compuesta con las segundas derivadas de la función $ f $.
+
+\vspace{0.2cm}
+\fbox{\parbox{0.9\linewidth}{
+\textbf{Prueba de la segunda derivada}
+
+Si la función $ f(x,y) $ tiene un punto crítico en $ (a,b) $ (osea que $ f_{x}(a,b)=0 $ y $ f_{y}(a,b)=0 $), y las segundas derivadas de $ f $ son continuas en un disco con centro en $ (a,b) $, entonces podemos armar el \textbf{Hessiano} ($ H_{f} $) y calcular su determinante ($ \det(H_{f}) $) para determinar los extremos (mínimos, máximos y/o puntos silla) de $ f $.
+\begin{enumerate}[a)]
+  \item Si $ \det(H_{f}) > 0 $ y $ f_{xx}(a,b)>0 $, entonces $ f(a,b) $ es un mínimo local.
+
+  \item Si $ \det(H_{f})>0 $ y $ f_{xx}(a,b)<0 $, entonces $ f(a,b) $ es un máximo local.
+
+  \item Si $ \det(H_{f})<0 $, entonces $ f(a,b) $ es un punto silla.
+
+  \item Si $ \det(H_{f})=0 $, entonces este método no sirve y no aporta información útil.
+\end{enumerate}
+}}\vspace{0.2cm}
+
+\underline{Ejemplo 3:} Encontrar los valores máximos y mínimos locales, y los puntos silla de la función $ f(x,y)=x^4+y^4-4xy+1 $.
+
+Lo primero que hacemos es encontrar los puntos críticos:
+\begin{align*}
+  f_{x} = 4x^3-4y && f_{y}=4y^3-4x
+\end{align*}
+
+Al igualar a cero las derivadas parciales se obtiene el siguiente sistema de ecuaciones:
+\[
+\begin{cases}
+  4(x^3-y) = 0\\
+  4(y^3-x) = 0
+\end{cases} \implies \begin{cases}
+  x^3=y\\
+  y^3=x 
+\end{cases} \implies (x^3)^3 - x = 0  
+\]
+\[
+  \implies 0=x(x^8-1)=x(x^4-1)(x^4+1)=x(x^2-1)(x^2+1)(x^4+1)
+\]
+
+De manera que hay tres raíces reales: $ x=\left\{0,1,-1\right\} $. Los tres puntos críticos son $ (0,0) $, $ (1,1) $ y $ (-1,-1) $.
+
+Ahora calculamos las segundas derivadas para poder armar el Hessiano:
+\begin{align*}
+  f_{xx} = 12x^2 && f_{xy} = -4 && f_{yx} = -4 && f_{yy} = 12y^2
+\end{align*}
+
+El Hessiano y su determinante nos quedan así:
+\[H_{f}=
+  \begin{bmatrix}
+	  12x^2 & -4 \\
+	  -4 & 12y^2
+  \end{bmatrix} \quad  , \quad 
+ \det(H_{f}) = 144x^2y^2-16 
+\]
+
+Al analizar la $ \det(H_{f}) $ en el punto $ (0,0) $ obtenemos $ \det(H_{f}(0,0))=-16 < 0 $, que por el caso (c) de la prueba de la segunda derivada sabemos que es un punto silla.
+
+Si calculamos la determinante en el punto $ (1,1) $ obtenemos $ \det(H_{f}(1,1))=128>0 $, y $ f_{xx}(1,1)=12>0 $, así que estamos en el caso (a) que nos dice que $ f(1,1)=-1 $ es un mínimo local. Lo mismo pasa cuando calculamos la determinante en el punto $ (-1,-1) $ que nos da $ \det(H_{f}(-1,-1))=128>0 $ y $ f_{xx}(-1,-1)=12>0 $, así que $ f(-1,-1)=-1 $ también es un mínimo local.
 
 
+\begin{center}
+\begin{tikzpicture}
+  \begin{axis}[
+    title={$f(x,y)=x^4+y^4-4xy+2$},
+    xlabel={$x$}, ylabel={$y$}, zlabel={$f(x,y)$},
+    view={100}{20},
+    axis lines=center,
+    axis on top=true,
+    domain=-2:2, y domain=-2:2,
+    zmax=5, point meta max=5,
+    samples=40,
+  ]
+  \addplot3 [surf, shader=flat, colormap/viridis,]
+	  {pow(x,4)+pow(y,4)-4*x*y+2};
+  \addplot3 [only marks, mark=*, mark size=5pt, color=red,]
+    coordinates{(0,0,2)};
+  \node at (axis cs:0,0,2) [anchor=north] {$P(0,0,2)$};
+  \addplot3 [only marks, mark=*, mark size=5pt, color=red,]
+    coordinates{(1,1,0)};
+  \node at (axis cs:1,1,0) [anchor=north] {$P(1,1,0)$};
+  \addplot3 [only marks, mark=*, mark size=5pt, color=red,]
+    coordinates{(-1,-1,0)};
+  \node at (axis cs:-1,-1,0) [anchor=north] {$P(-1,-1,0)$};
+  \end{axis}
+\end{tikzpicture}
+\end{center}
+
+
+
+
+
+\newpage
+\section{Integrales múltiples}
 
 
 
